--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
 /* Global Styles */
 body {
   margin: 0;
-  font-family: 'ClashDisplay-Semibold', sans-serif; 
+  font-family: 'ClashDisplay-Variable', sans-serif; 
 }
 h1 {
   margin: 0;
@@ -94,7 +94,7 @@ code {
 .marquee {
   display: flex;
   width: calc(100% * 15); /* Set to double the width for seamless effect */
-  animation: marquee 35s linear infinite;
+  animation: marquee 55s linear infinite;
   white-space: nowrap; /* Prevent wrapping */
 }
 
@@ -110,7 +110,7 @@ code {
 .marquee2 {
   display: flex;
   width: calc(100% * 15); /* Set to double the width for seamless effect */
-  animation: marquee2 35s linear infinite;
+  animation: marquee2 55s linear infinite;
   white-space: nowrap; /* Prevent wrapping */
 }
 
